# advent-of-code-2020

./: meson.build  readme.md
src/: meson.build
src/day1/: meson.build  puzzle.c
src/day10/: meson.build  puzzle.c
src/day11/: meson.build  puzzle.c
src/day12/: meson.build  puzzle.c
src/day13/: meson.build  puzzle.c
src/day14/: meson.build  puzzle.c
src/day15/: meson.build  puzzle.c
src/day16/: meson.build  puzzle.c
src/day17/: meson.build  puzzle.c
src/day18/: meson.build  puzzle.c
src/day19/: meson.build  puzzle.c
src/day2/: meson.build  puzzle.c
src/day3/: meson.build  puzzle.c
src/day4/: meson.build  passportDefinitions.h  puzzle.c
src/day5/: meson.build  puzzle.c
src/day6/: meson.build  puzzle.c
src/day7/: meson.build  puzzle.c
src/day8/: meson.build  puzzle.c
src/day9/: meson.build  puzzle.c
src/util/: meson.build  readFile.c  readFile.h  test.txt
