valgrind = find_program('valgrind', required: false)
valgrind_args = ['--tool=memcheck', '--leak-check=full', '--error-exitcode=1']

subdir('util')
subdir('day1')
subdir('day2')
subdir('day3')
subdir('day4')
subdir('day5')
subdir('day6')
subdir('day7')
subdir('day8')
subdir('day9')
subdir('day10')
subdir('day11')
subdir('day12')
subdir('day13')
subdir('day14')
